--- a/Todos/Todos.csproj
+++ b/Todos/Todos.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.7.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -89,11 +90,13 @@
     <Compile Include="Commands\Command.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Extensions\GenericExtensions.cs" />
+    <Compile Include="Extensions\TextboxExtensions.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\ITodoRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\TodoRepository.cs" />
+    <Compile Include="SearchChangedEventArgs.cs" />
     <Compile Include="Services\ISettingsService.cs" />
     <Compile Include="Services\ITodoService.cs" />
     <Compile Include="Services\SettingsService.cs" />
@@ -104,8 +107,8 @@
     <Compile Include="ViewModels\TodosViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModels\ViewModelClosable.cs" />
-    <Compile Include="Views\AddTodo.xaml.cs">
-      <DependentUpon>AddTodo.xaml</DependentUpon>
+    <Compile Include="Views\AddEditTodoView.xaml.cs">
+      <DependentUpon>AddEditTodoView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TodosView.xaml.cs">
       <DependentUpon>TodosView.xaml</DependentUpon>
@@ -130,7 +133,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\AddTodo.xaml">
+    <Page Include="Views\AddEditTodoView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
